--- a/11-regex.tex
+++ b/11-regex.tex
@@ -283,9 +283,9 @@ for line in hand:
 
 프로그램의 출력은 리스트의 단일 요소를 가진 문자열로 파이썬 리스트이다.
 
-\section{Combining searching and extracting}
+\section{검색과 추출 조합하기}
 
-If we want to find numbers on lines that start with the string ``X-'' such as:
+다음과 같은 ``X-'' 문자열로 시작하는 라인의 숫자를 찾고자 한다면,
 
 \beforeverb
 \begin{verbatim}
@@ -294,9 +294,10 @@ X-DSPAM-Probability: 0.0000
 \end{verbatim}
 \afterverb
 %
-We don't just want any floating point numbers from any lines.  We only to extract numbers from lines that have the above syntax.
 
-We can construct the following regular expression to select the lines:
+임의의 라인에서 임의의 부동 소수점 숫자가 아니라 상기 구문을 가진 라인에서만 숫자를 추출하고자 한다.
+
+라인을 선택하기 위해서 다음과 같이 정규 표현식을 구성한다.
 
 \beforeverb
 \begin{verbatim}
@@ -304,9 +305,11 @@ We can construct the following regular expression to select the lines:
 \end{verbatim}
 \afterverb
 %
-Translating this, we are saying, we want lines that start with ``X-'' followed by zero or more characters ``.*'' followed by a colon (``:'') and then a space.  After the space we are looking for one or more characters that are either a digit (0-9) or a period ``[0-9.]+''.  Note that in between the square braces, the period matches an actual period (i.e. it is not a wildcard between the square brackets).
 
-This is a very tight expression that will pretty much match only the lines we are interested in as follows:
+정규 표현식을 해석하면, {\verb"''^''"}에서 ``X-''으로 시작하고, ``.*''에서 0 혹은 그이상의 문자를 가지며, 콜론('':'')이 나오고 나서 공백을 만족하는 라인을 찾는다.
+공백 뒤에 ``[0-9.]+''에서 숫자 (0-9) 혹은 점을 가진 하나 혹은 그 이상의 문자가 있여야 한다.
+
+관심을 가지고 있는 특정한 라인과 매우 정확하게 매칭이되는 매우 빠듯한 정규 표현식으로 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -319,8 +322,8 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-When we run the program, we see the data nicely filtered to show 
-only the lines we are looking for.
+
+프로그램을 실행하면, 잘 걸러져서 찾고자 하는 라인만 볼 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -331,14 +334,19 @@ X-DSPAM-Probability: 0.0000
 \end{verbatim}
 \afterverb
 %
-But now we have to solve the problem of extracting the numbers using {\tt split}.  While it would be simple enough to use {\tt split}, we can use another feature of regular expressions to both search and parse the line at the same time.
-\index{string!split}
 
-Parentheses are another special character in regular expressions.  When you add parentheses to a regular expression they are ignored when matching the string, but when you are using {\tt findall()}, parentheses indicate that while you want the whole expression to match, you only are interested in extracting a portion of the substring that matches the regular expression.  
+하지만, 이제 {\tt rsplit} 사용해서 숫자를 뽑아내는 문제를 해결해야 합니다.
+{\tt rsplit}을 사용하는 것이 간단해 보이지만, 동시에 라인을 검색하고 파싱하기 위해서 정규 표현식의 또 다른 기능을 사용할 수 있다.
+
+\index{string!rsplit}
+
+괄호는 정규 표현식의 또 다른 특수 문자다. 정규 표현식에 괄호를 추가할 때, 문자열이 매칭될 때, 무시된다.
+하지만, {\tt findall()}을 사용할 때, 매칭할 전체 정규 표현식을 원할지라도, 정규 표현식을 매칭하는 부속 문자열의 부분만을 뽑아내다는 것을 괄호가 표시한다.
+
 \index{regex!parentheses}
 \index{parentheses!regular expression}
 
-So we make the following change to our program:
+그래서, 프로그램에 다음과 같이 수정한다.
 
 \beforeverb
 \begin{verbatim}
@@ -352,9 +360,10 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Instead of calling {\tt search()}, we add parentheses around the part of the regular expression that represents the floating point number to indicate we only want {\tt findall()} to give us back the floating point number portion of the matching string.
 
-The output from this program is as follows:
+{\tt search()}을 호출하는 대신에, 매칭 문자열의 부동 소수점 숫자만 뽑아내는 {\tt findall()}에 원하는 부동 소수점 숫자를 표현하는 정규 표현식 부분에 괄호를 추가한다.
+
+프로그램의 출력은 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -368,10 +377,10 @@ The output from this program is as follows:
 \end{verbatim}
 \afterverb
 %
-The numbers are still in a list and need to be converted from strings to floating point but we have used the power of regular expressions to both search and extract the information we found interesting.
 
-As another example of this technique, if 
-you look at the file there are a number of lines of the form:
+숫자가 여전히 리스트에 있어서 문자열에서 부동 소수점으로 변환할 필요가 있지만, 흥미로운 정보를 찾아 뽑아내기 위해서 정규 표현식의 강력한 힘을 사용했다.
+
+이 기술을 활용한 또 다른 예제로, 파일을 살펴보면, 폼(form)을 가진 라인이 많다.
 
 \beforeverb
 \begin{verbatim}
@@ -379,7 +388,8 @@ Details: http://source.sakaiproject.org/viewsvn/?view=rev&rev=39772
 \end{verbatim}
 \afterverb
 %
-If we wanted to extract all of the revision numbers (the integer number at the end of these lines) using the same technique as above,  we could write the following program:
+
+상기 언급한 동일한 기법을 사용하여 모든 변경 번호(라인의 끝에 정수 숫자)를 추출하고자 한다만, 다음과 같이 프로그램을 작성할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -393,9 +403,11 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Translating our regular expression, we are looking for lines that start with ``Details:', followed by any number of characters ``.*'' followed by ``rev='' and then by one or more digits.   We want lines that match the entire expression but we only want to extract the integer number at the end of the line so we surround ``[0-9]+'' with parentheses.  
 
-When we run the program, we get the following output:
+작성한 정규 표현식을 해석하면, ``Details:''로 시작하는 ``.*''에 임의의 문자들로, ``rev=''을 포함하고 나서, 하나 혹은 그 이상의 숫자를 가진 라인을 찾는다.
+전체 정규 표현식을 만족하는 라인을 찾고자 하지만, 라인의 끝에 정수만을 추출하기 위해서 ``[0-9]+''을 괄호로 감쌌다.
+
+프로그램을 실행하면, 다음 출력을 얻는다.
 
 \beforeverb
 \begin{verbatim}
@@ -407,9 +419,13 @@ When we run the program, we get the following output:
 \end{verbatim}
 \afterverb
 %
-Remember that the ``[0-9]+'' is ``greedy'' and it tries to make as large a string of digits as possible before extracting those digits.  This ``greedy'' behavior is why we get all five digits for each number.  The regular expression library expands in both directions until it counters a non-digit, the beginning, or the end of a line.
 
-Now we can use regular expressions to re-do an exercise from earlier in the book where we were interested in the time of day of each mail message.   We looked for lines of the form:
+``[0-9]+''은 ''탐욕(greedy)''스러워서, 숫자를 추출하기 전에 가능한 큰 문자열 숫자를 만들려고 한다는 것을 기억하라.
+이런 ''탐욕(greedy)''스러운 행동이 왜 각 숫자로 모든 5자리 숫자를 얻은 이유다.
+정규 표현식 라이브러리는 양방향으로 파일 처음이나 끝에 숫자가 아닌 것을 마주칠 때 까지 뻗어 나간다.
+
+이제 정규 표현식을 사용해서 각 전자우편 메시지의 요일에 관심이 있었던 책 앞의 연습 프로그램을 다시 작성한다.
+다음 형식의 라인을 찾는다.
 
 \beforeverb
 \begin{verbatim}
@@ -417,12 +433,17 @@ From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008
 \end{verbatim}
 \afterverb
 %
-And wanted to extract the hour of the day for each line.  Previously we did this with two calls to {\tt split}.  First the line was split into words and then we pulled out the fifth word and split it again on the colon character to pull out the two characters we were interested in.
+
+그리고 나서, 각 라인의 요일의 시간을 추출하고자 한다. 앞에서 {\tt split}를 두번 호출하여 작업을 수행했다. 첫번째는 라인을 단어로 쪼개고, 다섯번째 단어를 뽑아내서,
+관심있는 두 문자를 뽑아내기 위해서 콜론 문자에서 다시 쪼갰다.
 
 % Add a section on the notion of brittle code
-While this worked, it actually results in pretty brittle code that is assuming the lines are nicely formatted.  If you were to add enough error checking (or a big try/except block) to insure that your program never failed when presented with incorrectly formatted lines, the code would balloon to 10-15 lines of code that was pretty hard to read.
 
-We can do this far simpler with the following regular expression:
+작동을 할지 모르지만, 실질적으로 정말 부서지기 쉬운 코드로 라인이 잘 짜여져 있다고 가정하에 가능하다. 
+잘못된 형식의 라인이 나타날 때도 결코 망가지지 않는 프로그램을 담보하기 위해서 충분한 오류 검사기능을 추가하거나 커다란 try/except 블록을 넣으면, 
+참 읽기 힘든 10-15 라인의 코드로 커질 것이다.
+
+다음 정규 표현식으로 훨씬 간결하게 작성할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -430,9 +451,11 @@ We can do this far simpler with the following regular expression:
 \end{verbatim}
 \afterverb
 %
-The translation of this regular expression is that we are looking for lines that start with ``From '' (note the space) followed by any number of characters ``.*'' followed by a space followed by two digits ``[0-9][0-9]'' followed by a colon character.  This is the definition of the kinds of lines we are looking for.  
 
-In order to pull out only the hour using {\tt findall()}, we add parentheses around the two digits as follows:
+상기 정규 표현식을 해석하면, 공백을 포함한 ``From ''으로 시작해서, ``.*''에 임의 갯수의 문자, 그리고 공백, 두 개의 숫자 ``[0-9][0-9]'' 뒤에 콜론(:) 문자를 가진 
+라인을 찾는다. 일종의 찾고 있는 라인의 정의다. 
+
+{\tt findall()}을 사용해서 단지 시간만 뽑아내기 위해서, 두 숫자를 괄호를 다음과 같이 추가한다.
 
 \beforeverb
 \begin{verbatim}
@@ -440,7 +463,8 @@ In order to pull out only the hour using {\tt findall()}, we add parentheses aro
 \end{verbatim}
 \afterverb
 %
-This results in the following program:
+
+작업 결과는 다음과 같이 프로그램에 나타난다.
 
 \beforeverb
 \begin{verbatim}
@@ -453,7 +477,8 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-When the program runs, it produces the following output:
+
+프로그램을 실행하면, 다음 출력 결과가 나온다.
 
 \beforeverb
 \begin{verbatim}
@@ -465,15 +490,15 @@ When the program runs, it produces the following output:
 \end{verbatim}
 \afterverb
 %
-\section{Escape character}
 
-Since we use special characters in regular expressions to match the beginning or end of 
-a line or specify wild cards, we need a way to indicate that these characters are ``normal'' 
-and we want to match the actual character such as a dollar-sign or caret.
+\section{이스케이프(Escape) 문자}
 
-We can indicate that we want to simply match a character by prefixing that character 
-with a backslash.  For example, we can find money amounts with the following regular
-expression.
+라인의 처음과 끝을 매칭하거나, 와일드 카드를 명세하기 위해서 정규 표현식의 특수 문자를 사용했기 때문에,
+정규 표현식에 사용된 문자가 ''정상(normal)''적인 문자임을 표기할 방법이 필요하고
+달러 기호와 탈자 기호({\verb"^"}) 같은 실제 문자를 매칭하고자 한다.
+
+역슬래쉬('\')를 가진 문자를 앞에 덮붙여서 문자를 단순히 매칭하고자 한다고 나타낼 수 있다.
+예를 들어, 다음 정규표현식으로 금액을 찾을 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -483,78 +508,79 @@ y = re.findall('\$[0-9.]+',x)
 \end{verbatim}
 \afterverb
 %
-Since we prefix the dollar-sign with a backslash, it actually matches the dollar-sign
-in the input string instead of matching the ``end of line'' and the rest of the regular
-expression matches one or more digits or the period character.  {\em Note:} In between 
-square brackets, characters are not ``special''.   So when we say ``[0-9.]'', it really 
-means digits or a period.    Outside of square brackets, a period is the ``wild-card'' 
-character and matches any character.  In between square brackets, the period is a period.
 
-\section{Summary}
+역슬래쉬 달러 기호를 앞에 덮붙여서, 실제로 ''라인 끝(end of line)'' 매칭 대신에 입력 문자열의 달러 기호화 매칭한다.
+정규 표현식의 나머지 부분은 하나 혹은 그 이상의 숫자 혹은 소수점 문자를 매칭한다.
+{\em 주목}: 꺾쇠 괄호 내부에 문자는 ''특수 문자''가 아니다. 그래서 ``[0-9.]''은 실제 숫자 혹은 점을 의미한다.
+꺾쇠 괄호 외부에 점은 ''와일드 카드(wild-card)'' 문자이고 임의의 문자와 매칭한다. 꺾쇠 괄호 내부에서 점은 점일 뿐이다.
 
-While this only scratched the surface of regular expressions, we have learned a bit about the language of regular expressions.  They are search strings that have special characters in them that communicate your wishes to the regular expression system as to what defines ``matching'' and what is extracted from the matched strings.  Here are some of those special characters and character sequences:
+\section{요약}
+
+지금까지 정규 표현식의 표면을 긁은 정도지만, 정규 표현식 언어에 대해서 조금 학습했다.
+정규 표현식은 특수 문자로 구성된 검색 문자열로 ''매칭(matching)'' 정의하고 매칭된 문자열로부터 추출된 결과물을 정규 표현식 시스템과
+프로그래머가 의도한 바를 의사소통하는 것이다.
+다음에 특수 문자 및 문자 시퀀스의 일부가 있다.
 
 \verb"^" \newline
-Matches the beginning of the line.
+라인의 처음을 매칭.
 
 \$ \newline
-Matches the end of the line.
+라인의 끝을 매칭.
 
 . \newline
-Matches any character (a wildcard).
+임의의 문자를 매칭(와일드 카드)
 
 {\textbackslash}s \newline
-Matches a whitespace character.
+공백 문자를 매칭.
 
 {\textbackslash}S \newline
-Matches a non-whitespace character (opposite of {\textbackslash}s).
+공백이 아닌 문자를 매칭.({\textbackslash}s 의 반대).
 
 * \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character.
+바로 앞선 문자에 적용되고 0 혹은 그 이상의 앞선문자와 매칭을 표기함.
 
 *? \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character in ``non-greedy mode''.
+바로 앞선 문자에 적용되고 0 혹은 그 이상의 앞선문자와 매칭을 ''탐욕적이지 않은(non-greedy) 방식''으로 표기함.
 
 + \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character.
+바로 앞선 문자에 적용되고 1 혹은 그 이상의 앞선문자와 매칭을 표기함.
 
 +? \newline
-Applies to the immediately preceding character and indicates to match zero or more of the preceding character in ``non-greedy mode''.
+바로 앞선 문자에 적용되고 1 혹은 그 이상의 앞선문자와 매칭을 ''탐욕적이지 않은(non-greedy) 방식''으로 표기함.
 
 [aeiou] \newline
-Matches a single character as long as that character is in the specified set.  In this example, it would match ``a'', ``e'', ``i'', ``o'' or ``u'' but no other characters.
+명세된 집합 문자에 존재하는 단일 문자와 매칭. 다른 문자는 안되고, ``a'', ``e'', ``i'', ``o'', ``u'' 문자만 매칭되는 예제.
 
 [a-z0-9] \newline
-You can specify ranges of characters using the minus sign.  This example is a single character that must be a lower case letter or a digit.
+음수 기호로 문자 범위를 명세할 수 있다. 소문자이거나 숫자인 단일 문자만 매칭되는 예제.
 
 [\verb"^"A-Za-z] \newline
-When the first character in the set notation is a caret, it inverts the logic.  This example matches a single character that is anything {\em other than} an upper or lower case character.
+집합 표기의 첫문자가 {\verb"^"}인 경우, 로직을 거꾸로 적용한다. 대문자나 혹은 소문자가 아닌 임의의 단일 문자만 매칭하는 예제.
 
 ( ) \newline
-When parentheses are added to a regular expression, they are ignored for the purpose of matching, but allow you to extract a particular subset of the matched string rather than the whole string when using {\tt findall()}.
+괄호가 정규표현식에 추가될 때, 매칭을 무시한다. 하지만 {\tt findall()}을 사용할 때 전체 문자열보다 매칭된 문자열의 상세한 부속 문자열을 추출할 수 있게 한다.
 
 {\textbackslash}b \newline
-Matches the empty string, but only at the start or end of a word.
+빈 문자열을 매칭하지만, 단어의 시작과 끝에만 사용된다.
 
 {\textbackslash}B \newline
-Matches the empty string, but not at the start or end of a word.
+빈 문자열을 매칭하지만, 단어의 시작과 끝이 아닌 곳에 사용된다.
 
 {\textbackslash}d \newline
-Matches any decimal digit; equivalent to the set [0-9].
+임의의 숫자와 매칭하여 [0-9] 집합에 상응함.
 
 {\textbackslash}D \newline
-Matches any non-digit character; equivalent to the set [\verb"^"0-9].
+임의의 숫자가 아닌 문자와 매칭하여 [\verb"^"0-9] 집합에 상응함.
 
-\section{Bonus section for Unix users}
+\section{유닉스 사용자를 위한 보너스}
 
-Support for searching files using regular expressions was built into the Unix operating system 
-since the 1960's and it is available in nearly all programming languages in one form or another.
+정규 표현식을 사용하여 파일을 검색 기능은 1960년대 이래로 유닉스 운영 시스템에 내장되어
+여러가지 형태로 거의 모든 프로그래밍 언어에서 이용가능하다.
 
 \index{grep}
-As a matter of fact, there is a command-line program built into Unix 
-called {\bf grep} (Generalized Regular Expression Parser) that does pretty much 
-the same as the {\tt search()} examples in this chapter.  So if you have a 
-Macintosh or Linux system, you can try the following commands in your command line window.
+
+사실, {\tt search()} 예제에서와 거의 동일한 기능을 하는 {\bf grep} (Generalized Regular Expression Parser)으로 불리는 유닉스 내장 명령어 프로그램이 있다.
+그래서, 맥킨토시나 리눅스 운영 시스템을 가지고 있다면, 명령어 창에서 다음 명령어를 시도할 수 있다.
 
 \beforeverb
 \begin{verbatim}
